Full functionality with icons.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,8 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.HOME" />                            <!-- to be offered to serve as home screen -->
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
 
